<resources>
    <string name="app_name">ActivityPal</string>
    <string name="register_btn">Register</string>
    <!-- Reg Fragment -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="button">Button</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="title_activity_register">RegisterActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="create_new_account">Create New Account</string>
    <string name="logout">Logout</string>
    <string name="addactivity">addActivity</string>
    <string name="activity_name">Activity Name</string>
    <string name="add_an_activity">Add an Activity</string>
    <string name="add">Add</string>
    <string name="my_activities">My Activities</string>
    <string name="notifications">Notifications</string>
    <string name="home">Home</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="notifications_fragment">Notifications Fragment</string>
    <string name="my_activities_fragment">My Activities Fragment</string>
    <string name="add_my_activity">Add my activity</string>
    <string name="add_photo">Add Photo</string>
    <string name="activity_photo">Activity Photo</string>
    <string name="_01_01_2022">01/01/2022</string>
    <string name="start_time">Start Time</string>
    <string name="please_add_an_activity">Please Add An Activity</string>
    <string name="end_time">End Time</string>
    <string name="submit">Submit</string>
    <string name="Jackfrost" />
    <string name="username">Username</string>
    <string name="placeholder">placeholder</string>
    <string name="textview2">TextView2</string>
    <string name="time_dash">-</string>
    <string name="textview">TextView</string>
    <string name="activity_location">activity_location</string>
    <string name="image_of_activity">image of activity</string>
    <string name="an_activity_image">An Activity Image</string>
    <string name="join_btn_text">Join</string>
    <string name="my_activities_location">my_activities_location</string>
    <string name="edit_button">Edit</string>
    <string name="joined_activity_name">Joined Activity Name</string>
    <string name="joined_activity_photo">Joined Activity Photo</string>
    <string name="joinedactivities">joinedactivities</string>
    <string name="joined_activities">Joined Activities</string>
    <string name="leave_button">Leave</string>
    <string name="date">Date</string>
</resources>