<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/my_act_LL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/my_activities_cardview"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:showIn="@layout/my_activities_list_adapter">

                <ImageView
                    android:id="@+id/activity_el_photo"
                    style="@style/image_style"
                    android:layout_width="120dp"
                    android:layout_height="160dp"
                    android:contentDescription="@string/an_activity_image"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_launcher_foreground"
                    tools:ignore="ImageContrastCheck" />

                <TextView
                    android:id="@+id/activity_el_name"
                    style="@style/activity_name_style"
                    android:text="@string/placeholder"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/activity_el_photo"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.154" />

                <TextView
                    android:id="@+id/activity_el_location"
                    style="@style/activity_location_style"
                    android:layout_marginTop="4dp"
                    android:text="@string/activity_location"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/activity_el_photo"
                    app:layout_constraintTop_toBottomOf="@+id/activity_el_name" />

                <TextView
                    android:id="@+id/my_activity_start"
                    style="@style/activity_start_style"
                    android:layout_marginStart="24dp"
                    android:text="@string/start_time"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/activity_el_photo"
                    app:layout_constraintTop_toBottomOf="@+id/my_date"
                    app:layout_constraintVertical_bias="0.147" />

                <TextView
                    android:id="@+id/dash_line"
                    style="@style/time_dash_style"
                    android:text="@string/time_dash"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/my_activity_end"
                    app:layout_constraintHorizontal_bias="0.523"
                    app:layout_constraintStart_toEndOf="@+id/my_activity_start"
                    app:layout_constraintTop_toBottomOf="@+id/my_date"
                    app:layout_constraintVertical_bias="0.147" />

                <TextView
                    android:id="@+id/my_activity_end"
                    style="@style/activity_end_style"
                    android:layout_marginEnd="92dp"
                    android:text="@string/end_time"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/my_date"
                    app:layout_constraintVertical_bias="0.161" />

                <TextView
                    android:id="@+id/my_activity_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:visibility="invisible"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/edit_button"
                    style="@style/interact_buttons"
                    android:layout_width="80dp"
                    android:layout_height="50dp"
                    android:background="@drawable/edit_button"
                    android:text="@string/edit_button"
                    android:textColor="#0D47A1"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.486"
                    app:layout_constraintStart_toEndOf="@+id/activity_el_location"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.54"
                    tools:ignore="TextContrastCheck,TextContrastCheck" />

                <TextView
                    android:id="@+id/my_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/date"
                    android:textSize="16sp"
                    app:layout_constraintStart_toEndOf="@+id/activity_el_photo"
                    app:layout_constraintTop_toBottomOf="@+id/activity_el_location" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>
</layout>