<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/joined_activity_location"
                    style="@style/activity_location_style"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/my_activities_location"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/joined_activity_image"
                    app:layout_constraintTop_toBottomOf="@+id/joined_activity_name" />

                <TextView
                    android:id="@+id/joined_activity_start"
                    style="@style/activity_start_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/start_time"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/joined_activity_image"
                    app:layout_constraintTop_toBottomOf="@+id/joined_activity_location" />

                <TextView
                    android:id="@+id/dash_line2"
                    style="@style/time_dash_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time_dash"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/joined_activity_end"
                    app:layout_constraintHorizontal_bias="0.476"
                    app:layout_constraintStart_toEndOf="@+id/joined_activity_start"
                    app:layout_constraintTop_toBottomOf="@+id/joined_activity_location" />

                <TextView
                    android:id="@+id/joined_activity_end"
                    style="@style/activity_end_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/end_time"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/joined_activity_location" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/leave_button"
                    style="@style/interact_buttons"
                    android:layout_width="80dp"
                    android:layout_height="50dp"
                    android:background="@drawable/edit_button"
                    android:text="@string/leave_button"
                    android:textColor="#0D47A1"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.27"
                    app:layout_constraintStart_toEndOf="@+id/joined_activity_location"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.43"
                    tools:ignore="TextContrastCheck,TextContrastCheck" />

                <TextView
                    android:id="@+id/joined_activity_name"
                    style="@style/activity_name_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/placeholder"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/joined_activity_image"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.13" />

                <ImageView
                    android:id="@+id/joined_activity_image"
                    style="@style/image_style"
                    android:layout_width="120dp"
                    android:layout_height="150dp"
                    android:contentDescription="@string/joined_activity_photo"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_launcher_foreground"
                    tools:ignore="ImageContrastCheck" />

                <TextView
                    android:id="@+id/joined_activity_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:visibility="invisible"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</layout>