<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ActivityDetailsActivity">

            <TextView
                android:id="@+id/detail_location"
                style="@style/activity_details_text_layout"
                android:layout_marginTop="24dp"
                android:text="@string/activity_location"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detail_image" />

            <TextView
                android:id="@+id/activity_detail_name"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_marginTop="24dp"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/activity_name"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/detail_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/activity_detail_name"
                app:srcCompat="@drawable/ic_launcher_foreground"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:id="@+id/detail_date"
                style="@style/activity_details_text_layout"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_marginTop="24dp"
                android:text="@string/date"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detail_location" />

            <TextView
                android:id="@+id/detail_start"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_marginTop="24dp"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/start_time"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.503"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detail_date" />

            <TextView
                android:id="@+id/detail_end"
                style="@style/activity_details_text_layout"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_marginTop="24dp"
                android:text="@string/end_time"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detail_start" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>